# TopSystemTestCase

./: .gitmodules  CMakeLists.txt  Makefile  Диаграмма без названия.drawio
src/: CMakeLists.txt  Camera.cpp  Camera.h  Figure.h  Scene.cpp  Scene.h  SceneObject.cpp  SceneObject.h  main.cpp
src/Drawer/: CMakeLists.txt
src/Drawer/include/: Buffer.h  BufferGeneratorGL.h  IDrawer.h
src/Drawer/src/: Buffer.cpp  BufferGeneratorGL.cpp  DrawerOpenGl.cpp  DrawerOpenGl.h  IDrawer.cpp  ShaderProgram.cpp  ShaderProgram.h
src/Figures/Circle/: CMakeLists.txt
src/Figures/Circle/include/: Circle.h
src/Modifications/: Modifications.h
src/Observer/: Observable.cpp  Observable.h  Observer.h
src/Scene/: CMakeLists.txt
src/Scene/include/: Camera.h  IDataPacker.h  Scene.h
src/Scene/src/: Camera.cpp  IDataPacker.cpp  Scene.cpp
src/SceneModels/: CMakeLists.txt  Figure.h  SceneObject.h
src/SceneModels/Circle/: CMakeLists.txt
src/SceneModels/Circle/src/: Circle.cpp
src/SceneModels/include/: Circle.h  Figure.h  FigureFactory.h  IFigure.h  SceneObject.h  Triangle.h
src/SceneModels/src/: Circle.cpp  Circle.h  Triangle.cpp
src/SpecialConstructures/: CMakeLists.txt
src/SpecialConstructures/Observer/: CMakeLists.txt
src/SpecialConstructures/Observer/include/: Observable.h
src/SpecialConstructures/Observer/src/: Observable.cpp
src/WindowRendering/: CMakeLists.txt
src/WindowRendering/include/: WindowGLWrapper.h  WindowRendering.h
src/WindowRendering/src/: WindowRendering.cpp
